--- a/python/day5.ipynb
+++ b/python/day5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "494"
+       "'FWNSHLDNZ'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -39,6 +39,21 @@
    "source": [
     "%%ipytest\n",
     "\n",
+    "def load_stacks(lines):\n",
+    "    stacks = {}\n",
+    "    for ln, ll in enumerate(lines):\n",
+    "        if ll.strip() == \"\":\n",
+    "            break\n",
+    "\n",
+    "        last = None\n",
+    "        for ii, cc in enumerate(ll):\n",
+    "            if 65 <= ord(cc) <= 90:\n",
+    "                stacks.setdefault(ii, []).append(cc)\n",
+    "            elif 48 <= ord(cc) <=57:\n",
+    "                stacks[int(cc)] = list(reversed(stacks.pop(ii, [])))\n",
+    "\n",
+    "    return stacks, ln\n",
+    "\n",
     "def part1(infile):\n",
     "    filepath = os.path.join(\"..\", \"dat\", infile)\n",
     "    if not os.path.exists(filepath):\n",
@@ -51,39 +66,39 @@
     "    answer = 0\n",
     "\n",
     "    ###############################################################################################################\n",
-    "    for ll in dd:\n",
-    "        assign = re.match(\"(\\d+)-(\\d+),(\\d+)-(\\d+)\", ll)\n",
-    "        if assign:\n",
-    "            aa, bb, cc, dd = map(lambda x: int(x), assign.groups())\n",
-    "            if aa > bb or cc > dd:\n",
-    "                raise ValueError(ll)\n",
+    "    stacks, ln = load_stacks(dd)\n",
+    "    for ss, ll in enumerate(dd[ln+1:]):\n",
+    "        cmd = re.match(\"move (\\d+) from (\\d+) to (\\d+)\", ll)\n",
+    "        if cmd:\n",
+    "            nbox, from_col, to_col = cmd.groups()\n",
+    "            nbox, from_col, to_col = int(nbox), int(from_col), int(to_col)\n",
     "            \n",
-    "            if aa <= cc and bb >= dd:\n",
-    "                answer += 1\n",
-    "            elif aa >= cc and bb <= dd:\n",
-    "                answer += 1\n",
+    "            stacks[to_col].extend(reversed(stacks[from_col][-nbox:]))\n",
+    "            del stacks[from_col][-nbox:]\n",
+    "\n",
+    "    answer = \"\".join([ vv[-1] for _, vv in sorted(stacks.items(), key=lambda x: x[0])])\n",
     "    ###############################################################################################################\n",
     "    \n",
     "    return answer\n",
     "\n",
     "def test_part1():\n",
-    "    assert part1(\"day4_test.txt\") == 2\n",
+    "    assert part1(\"day5_test.txt\") == \"CMZ\"\n",
     "\n",
-    "part1(\"day4.txt\")"
+    "part1(\"day5.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "833"
+       "'RNRGDNFQG'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,24 +126,25 @@
     "    answer = 0\n",
     "\n",
     "    ###############################################################################################################\n",
-    "    for ll in dd:\n",
-    "        assign = re.match(\"(\\d+)-(\\d+),(\\d+)-(\\d+)\", ll)\n",
-    "        if assign:\n",
-    "            aa, bb, cc, dd = map(lambda x: int(x), assign.groups())\n",
-    "            if aa > bb or cc > dd:\n",
-    "                raise ValueError(ll)\n",
+    "    stacks, ln = load_stacks(dd)\n",
+    "    for ss, ll in enumerate(dd[ln+1:]):\n",
+    "        cmd = re.match(\"move (\\d+) from (\\d+) to (\\d+)\", ll)\n",
+    "        if cmd:\n",
+    "            nbox, from_col, to_col = cmd.groups()\n",
+    "            nbox, from_col, to_col = int(nbox), int(from_col), int(to_col)\n",
     "            \n",
-    "            if bb >= cc and aa <= dd:\n",
-    "                answer += 1\n",
+    "            stacks[to_col].extend(stacks[from_col][-nbox:])\n",
+    "            del stacks[from_col][-nbox:]\n",
+    "\n",
+    "    answer = \"\".join([ vv[-1] for _, vv in sorted(stacks.items(), key=lambda x: x[0])])\n",
     "    ###############################################################################################################\n",
-    "    \n",
     "    \n",
     "    return answer\n",
     "\n",
     "def test_part2():\n",
-    "    assert part2(\"day4_test.txt\") == 4\n",
+    "    assert part2(\"day5_test.txt\") == \"MCD\"\n",
     "\n",
-    "part2(\"day4.txt\")"
+    "part2(\"day5.txt\")"
    ]
   }
  ],
@@ -153,7 +169,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e0acaf148705ed9ed86cc5cad12259d7985e30670e5686e5f55604a9b3b84a55"
+    "hash": "a39f6c2249073c5c92ee04c8c63e216469c6dfa3b30ca9a1923d98708a4eabe1"
    }
   }
  },
